[package]
name = "aibx"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
futures = "0.3.31"
msedge-tts = "0.2.3"
ollama-rs = { version = "0.2.1", features = ["chat-history", "stream"] }
rand = "0.8.5"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["io-std", "macros", "net", "rt-multi-thread", "sync", "time", "tokio-macros"] }
tokio-stream = "0.1.16"
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
toml = "0.8.19"
